refactor pages and dirs

--- a/phala-cloud/attestation/verifying-attestation.mdx
+++ b/phala-cloud/attestation/verifying-attestation.mdx
@@ -1,7 +1,7 @@
 ---
 description: Security features and remote attestation capabilities of Phala Cloud
   TEE.
-title: What is Attestation
+title: Verifying
 ---
 
 
