--- a/phala-cloud/getting-started/explore-templates/start-from-template.mdx
+++ b/phala-cloud/getting-started/explore-templates/start-from-template.mdx
@@ -1,7 +1,6 @@
 ---
 description: Quick start guide for deploying confidential applications on Phala Cloud.
-title: Start from Template
-icon: "layout-template"
+title: NextJS & Python
 ---
 
 
