--- a/phala-cloud/getting-started/start-from-cloud-ui.mdx
+++ b/phala-cloud/getting-started/start-from-cloud-ui.mdx
@@ -1,7 +1,6 @@
 ---
 description: Quick start guide for deploying confidential applications on Phala Cloud.
-title: Your First CVM Deployment
-icon: "play"
+title: CVM Deployment
 ---
 
 
