--- a/phala-cloud/phala-cloud-user-guides/create-cvm/create-with-private-docker-image.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/create-with-private-docker-image.mdx
@@ -1,7 +1,6 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
-title: Deploy Private Docker Image to CVM
-icon: "lock"
+title: Private Docker Image
 ---
 
 
