--- a/phala-cloud/phala-cloud-user-guides/create-cvm/debugging-and-analyzing-logs/debug-your-application.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/debugging-and-analyzing-logs/debug-your-application.mdx
@@ -1,7 +1,6 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
-title: Debug Your Application
-icon: "bug"
+title: Debug Application
 ---
 
 
