--- a/phala-cloud/phala-cloud-user-guides/create-cvm/debugging-and-analyzing-logs/private-log-viewer.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/debugging-and-analyzing-logs/private-log-viewer.mdx
@@ -1,7 +1,6 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
-title: Configure a Private Log Viewer
-icon: "eye-off"
+title: Private Log Viewer
 ---
 
 
