--- a/phala-cloud/phala-cloud-user-guides/create-cvm/resize-resource.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/resize-resource.mdx
@@ -1,7 +1,6 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
-title: Application Scaling & Resource Management
-icon: "battery-plus"
+title: Scaling
 ---
 
 
