--- a/phala-cloud/getting-started/explore-templates/launch-an-eliza-agent.mdx
+++ b/phala-cloud/getting-started/explore-templates/launch-an-eliza-agent.mdx
@@ -1,7 +1,6 @@
 ---
 description: Quick start guide for deploying confidential applications on Phala Cloud.
-title: Launch an Eliza Agent
-icon: "bot"
+title: Eliza Agent
 ---
 
 
