--- a/phala-cloud/getting-started/explore-templates/overview.mdx
+++ b/phala-cloud/getting-started/explore-templates/overview.mdx
@@ -1,7 +1,6 @@
 ---
 description: Quick start guide for deploying confidential applications on Phala Cloud.
-title: Overview
-icon: "book-open"
+title: Quick Guide
 ---
 
 With [**Phala Cloud Templates**](https://cloud.phala.network/templates), you can deploy swiftly with our ready-to-use templates! Enjoy quick, code-free deployments by exploring our diverse offerings from MCP, A2A, Next.js, x402, and more.
