--- a/phala-cloud/getting-started/sign-up-for-cloud-account.mdx
+++ b/phala-cloud/getting-started/sign-up-for-cloud-account.mdx
@@ -1,7 +1,6 @@
 ---
 description: Quick start guide for deploying confidential applications on Phala Cloud.
-title: Create Your Phala Cloud Account
-icon: "user-plus"
+title: Create Account
 ---
 
 
