--- a/phala-cloud/gpu-cvm/overview.mdx
+++ b/phala-cloud/gpu-cvm/overview.mdx
@@ -1,7 +1,7 @@
 ---
 description: Run Large Language Models securely in GPU Trusted Execution Environment
   (TEE) for confidential AI.
-title: Run LLM in GPU TEE
+title: GPU CVM
 icon: "microchip"
 ---
 
