--- a/phala-cloud/networking/expose-service-port.mdx
+++ b/phala-cloud/networking/expose-service-port.mdx
@@ -1,7 +1,6 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
-title: Expose Service Port
-icon: "network"
+title: Service Endpoints
 ---
 
 
