--- a/phala-cloud/networking/setting-up-custom-domain.mdx
+++ b/phala-cloud/networking/setting-up-custom-domain.mdx
@@ -1,7 +1,6 @@
 ---
 description: For users that want to bring their own domain for their CVM.
-title: Setting Up Custom Domain
-icon: "globe"
+title: Custom Domain
 ---
 
 
