--- a/phala-cloud/phala-cloud-cli/overview.mdx
+++ b/phala-cloud/phala-cloud-cli/overview.mdx
@@ -1,7 +1,7 @@
 ---
 description: A command-line tool for managing Trusted Execution Environment (TEE)
   deployments on Phala Cloud, from local development to cloud deployment.
-title: Quick Start Guide
+title: Phala Cloud CLI
 icon: "terminal"
 ---
 
