--- a/phala-cloud/phala-cloud-user-guides/create-cvm/create-with-docker-compose.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/create-with-docker-compose.mdx
@@ -1,7 +1,6 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
-title: Deploy CVM with Docker Compose
-icon: "docker"
+title: CVM with Docker Compose
 ---
 
 
