--- a/phala-cloud/phala-cloud-user-guides/create-cvm/overview.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/overview.mdx
@@ -1,7 +1,6 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
-title: Overview
-icon: "server"
+title: Create CVM
 ---
 
 ## Choose Your Preferred Method
