--- a/phala-cloud/what-is/what-is-phala-cloud.mdx
+++ b/phala-cloud/what-is/what-is-phala-cloud.mdx
@@ -1,9 +1,10 @@
 ---
-title: Overview of Phala Cloud
+title: What is Phala Cloud
 cover: images/phala-docs (1).jpg
-coverY: -101
-icon: "cloud"
+icon: cloud
 ---
+
+## What is Phala Cloud
 
 Phala Cloud is a Confidential AI native Neocloud solution that provides you with a secure, user-friendly environment for running AI applications. You can deploy any standard Docker application directly into a **Trusted Execution Environment (TEE)**, ensuring your AI models and data remain confidential and tamper-proof.
 
