--- a/phala-cloud/monitoring/serials-logs.mdx
+++ b/phala-cloud/monitoring/serials-logs.mdx
@@ -1,6 +1,6 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
-title: Check Logs
+title: Serials Logs
 ---
 
 
