--- a/phala-cloud/security-and-privacy/create-crypto-wallet.mdx
+++ b/phala-cloud/security-and-privacy/create-crypto-wallet.mdx
@@ -1,7 +1,6 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
-title: Create Crypto Wallet
-icon: "wallet"
+title: Secure your Application
 ---
 
 
