--- a/phala-cloud/storage/access-database.mdx
+++ b/phala-cloud/storage/access-database.mdx
@@ -1,7 +1,6 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
-title: Access Database
-icon: "database"
+title: Database
 ---
 
 
