relocation old article

--- a/phala-cloud/phala-cloud-cli/overview.mdx
+++ b/phala-cloud/phala-cloud-cli/overview.mdx
@@ -1,8 +1,7 @@
 ---
 description: A command-line tool for managing Trusted Execution Environment (TEE)
   deployments on Phala Cloud, from local development to cloud deployment.
-title: Phala Cloud CLI
-icon: "terminal"
+title: CLI Overview
 ---
 
 
