--- a/phala-cloud/phala-cloud-api/overview.mdx
+++ b/phala-cloud/phala-cloud-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
-title: Phala Cloud API
+title: (beta) API Overview
 icon: "webhook"
 ---
 
