relocation user-cases

--- a/phala-cloud/getting-started/use-cases/tee_with_ai.mdx
+++ b/phala-cloud/getting-started/use-cases/tee_with_ai.mdx
@@ -1,8 +1,7 @@
 ---
 description: Build confidential AI applications with Trusted Execution Environment
   technology.
-title: Building Confidential AI with TEE
-icon: "brain"
+title: Building Confidential AI
 ---
 
 
