--- a/phala-cloud/getting-started/use-cases/tee_with_fhe_and_mpc.mdx
+++ b/phala-cloud/getting-started/use-cases/tee_with_fhe_and_mpc.mdx
@@ -1,7 +1,6 @@
 ---
 description: Combine TEE with FHE and MPC for enhanced privacy-preserving computations.
-title: TEE as 2FA for FHE/MPC Systems
-icon: "lock"
+title: 2FA for FHE/MPC Systems
 ---
 
 
