relocation confidential-ai

--- a/phala-cloud/gpu/overview.mdx
+++ b/phala-cloud/gpu/overview.mdx
@@ -1,8 +1,7 @@
 ---
 description: Run Large Language Models securely in GPU Trusted Execution Environment
   (TEE) for confidential AI.
-title: GPU CVM
-icon: "microchip"
+title: Overview
 ---
 
 
