--- a/phala-cloud/cases/best-practices-and-successful-case.mdx
+++ b/phala-cloud/cases/best-practices-and-successful-case.mdx
@@ -1,6 +1,5 @@
 ---
-title: Successful Cases
-icon: star
+title: Cloud Cases
 ---
 
 Explore how Phala Cloud enables secure, verifiable AI and trustless applications using TEE technology.
