--- a/network/index.mdx
+++ b/network/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Phala Network Overview"
-description: "Build confidential, verifiable, and decentralized applications with Phala Network's Trusted Execution Environment (TEE) technology."
+description: "Build confidential, verifiable, and decentralized applications with Phala Network's TEE technology."
 ---
 
 # 👾 Phala Network Docs
