--- a/phala-cloud/cases/best-practices-and-successful-case.mdx
+++ b/phala-cloud/cases/best-practices-and-successful-case.mdx
@@ -1,5 +1,5 @@
 ---
-title: Cloud Cases
+title: Cases Explorer
 ---
 
 Explore how Phala Cloud enables secure, verifiable AI and trustless applications using TEE technology.
