--- a/phala-cloud/cases/use-cases/tee_with_ai.mdx
+++ b/phala-cloud/cases/use-cases/tee_with_ai.mdx
@@ -53,8 +53,8 @@ The integration of TEE technology with AI addresses several critical challenges:
 
 ### TEE in Agent Frameworks
 
-<table data-card-size="large" data-view="cards"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f916">🤖</span> Eliza: Secure AI Agent Framework with TEE Integration</td><td><a href="../../images/tee_eliza.png">tee_eliza.png</a></td><td><a href="https://eliza.how/packages/plugins/tee">Eliza TEE Plugin</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f3ae">🎮</span> Virtuals: Game Agents Running in Secure TEE Environment</td><td><a href="../../images/tee_game_agents.png">tee_game_agents.png</a></td><td><a href="https://github.com/game-by-virtuals/game-node/tree/main/game-starter#to-run-project-in-phala-tee">Virtuals Game Agent</a></td></tr></tbody></table>
+<table data-card-size="large" data-view="cards"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f916">🤖</span> Eliza: Secure AI Agent Framework with TEE Integration</td><td><a href="/images/tee_eliza.png">tee_eliza.png</a></td><td><a href="https://eliza.how/packages/plugins/tee">Eliza TEE Plugin</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f3ae">🎮</span> Virtuals: Game Agents Running in Secure TEE Environment</td><td><a href="/images/tee_game_agents.png">tee_game_agents.png</a></td><td><a href="https://github.com/game-by-virtuals/game-node/tree/main/game-starter#to-run-project-in-phala-tee">Virtuals Game Agent</a></td></tr></tbody></table>
 
 ### Other TEE-AI Integrations
 
-<table data-card-size="large" data-view="cards"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f4e1">📡</span> Vana Network: Decentralized Data Privacy with TEE</td><td><a href="../../images/tee_vana.png">tee_vana.png</a></td><td><a href="https://phala.network/posts/phala-network-and-vana-network-join-forces-to-usher-in-new-era-for-decentralized-data-privacy">Phala x Vana</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f310">🌐</span> 0G: Confidential AI Computing in Decentralized Networks</td><td><a href="../../images/tee_0g.png">tee_0g.png</a></td><td><a href="https://phala.network/posts/phala-network-and-0g-partner-for-enhanced-confidential-ai-computing">Phala x 0G</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f4b0">💰</span> Fairblock: Unruggable AI with MPC-TEE Hybrid Architecture</td><td><a href="../../images/fairblock_tee_registry.png">tee_fairblock.png</a></td><td><a href="https://phala.network/posts/phala-x-fairblock-a-blueprint-for-unruggable-ai-with-an-mpctee-hybrid-architecture">Phala x Fairblock</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f331">🌱</span> Spore.fun: Autonomous AI Evolution in Secure Environments</td><td><a href="../../images/tee_spore.png">tee_spore.png</a></td><td><a href="https://www.spore.fun/blog/wtf">Spore.fun</a></td></tr></tbody></table>
+<table data-card-size="large" data-view="cards"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f4e1">📡</span> Vana Network: Decentralized Data Privacy with TEE</td><td><a href="/images/tee_vana.png">tee_vana.png</a></td><td><a href="https://phala.network/posts/phala-network-and-vana-network-join-forces-to-usher-in-new-era-for-decentralized-data-privacy">Phala x Vana</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f310">🌐</span> 0G: Confidential AI Computing in Decentralized Networks</td><td><a href="/images/tee_0g.png">tee_0g.png</a></td><td><a href="https://phala.network/posts/phala-network-and-0g-partner-for-enhanced-confidential-ai-computing">Phala x 0G</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f4b0">💰</span> Fairblock: Unruggable AI with MPC-TEE Hybrid Architecture</td><td><a href="/images/fairblock_tee_registry.png">tee_fairblock.png</a></td><td><a href="https://phala.network/posts/phala-x-fairblock-a-blueprint-for-unruggable-ai-with-an-mpctee-hybrid-architecture">Phala x Fairblock</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f331">🌱</span> Spore.fun: Autonomous AI Evolution in Secure Environments</td><td><a href="/images/tee_spore.png">tee_spore.png</a></td><td><a href="https://www.spore.fun/blog/wtf">Spore.fun</a></td></tr></tbody></table>
