--- a/phala-cloud/cases/use-cases/tee_with_zk_and_zkrollup.mdx
+++ b/phala-cloud/cases/use-cases/tee_with_zk_and_zkrollup.mdx
@@ -55,7 +55,7 @@ We can not guarantee any single cryptography system is 100% secure. At the same 
         Phala Network: Run zk-Rollup STF (state transition function) in TEE
       </td>
       <td>
-        <a href="../../images/Use-Cases-Multi-Proof.png">
+        <a href="/images/Use-Cases-Multi-Proof.png">
           Use-Cases-Multi-Proof.png
         </a>
       </td>
@@ -73,7 +73,7 @@ We can not guarantee any single cryptography system is 100% secure. At the same 
         Primus: Build Trustless zkTLS with TEE
       </td>
       <td>
-        <a href="../../images/tee_zktls.png">tee_zktls.png</a>
+        <a href="/images/tee_zktls.png">tee_zktls.png</a>
       </td>
       <td>
         <a href="https://medium.com/@primuslabs/primus-x-phala-network-build-trustless-zktls-with-tee-332a26d48c83">
@@ -89,7 +89,7 @@ We can not guarantee any single cryptography system is 100% secure. At the same 
         Running SP1 zkVM in TEE H200 with Low Overhead
       </td>
       <td>
-        <a href="../../images/zkvm-sp1-in-gpu-tee.jpg">
+        <a href="/images/zkvm-sp1-in-gpu-tee.jpg">
           zkvm-sp1-in-gpu-tee.jpg
         </a>
       </td>
