--- a/phala-cloud/cvm/create-with-docker-compose.mdx
+++ b/phala-cloud/cvm/create-with-docker-compose.mdx
@@ -35,7 +35,7 @@ For applications requiring additional security or proprietary code, Phala Cloud 
 ## Example Configuration
 
 <Frame caption="Docker Compose deployment interface">
-    <img src="../../../images/cloud-compose-deployment.png" alt="Docker Compose deployment interface" />
+    <img src="/images/cloud-compose-deployment.png" alt="Docker Compose deployment interface" />
 
 </Frame>
 
