--- a/phala-cloud/cvm/create-with-private-docker-image.mdx
+++ b/phala-cloud/cvm/create-with-private-docker-image.mdx
@@ -22,7 +22,7 @@ The most straightforward approach is configuring registry access through the use
 4. Save your configuration
 
 <Frame caption="Private Docker registry configuration">
-    <img src="../../../images/cloud-private-docker.png" alt="Private Docker registry configuration" />
+    <img src="/images/cloud-private-docker.png" alt="Private Docker registry configuration" />
 
 </Frame>
 
