--- a/phala-cloud/faqs.mdx
+++ b/phala-cloud/faqs.mdx
@@ -8,7 +8,7 @@ title: FAQ
 
 ### What is Phala TEE Cloud?
 
-Phala TEE Cloud is a platform that provides Trusted Execution Environment (TEE) virtual machines. These VMs offer hardware-level isolation through Intel TDX technology, allowing for secure and private computation.
+Phala TEE Cloud is a platform that provides TEE virtual machines. These VMs offer hardware-level isolation through Intel TDX technology, allowing for secure and private computation.
 
 ### How are the VMs provisioned?
 
