--- a/phala-cloud/support.mdx
+++ b/phala-cloud/support.mdx
@@ -1,10 +1,8 @@
 ---
-description: Get support for Phala Cloud.
+description: Get your questions answered
 title: Get Support
 icon: "life-buoy"
 ---
-
-## Get Support
 
 If you have any questions or need assistance, please contact us at:
 
