--- a/phala-cloud/troubleshooting/troubleshooting.mdx
+++ b/phala-cloud/troubleshooting/troubleshooting.mdx
@@ -13,7 +13,7 @@ Join our support groups: 🌍 [Global](https://t.me/+nbhjx1ADG9EyYmI9), 🇨🇳
     This error indicates that there are no available nodes for deployment. Generally, this is because you are in the free tier and you have already deployed the maximum number of CVMs. Please upgrade to a paid plan to continue or delete your old CVMs.
 
     <Frame caption="No available nodes found error">
-        <img src="../../images/error-no-available-nodes.png" alt="No available nodes found" />
+        <img src="/images/error-no-available-nodes.png" alt="No available nodes found" />
     </Frame>
 
 ## Errors in CVM Logs
