--- a/phala-cloud/upgrading/upgrade-application.mdx
+++ b/phala-cloud/upgrading/upgrade-application.mdx
@@ -1,19 +1,16 @@
 ---
-description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
-title: Upgrade Application
+description: Seamless code updates in TEE
+title: Update Code
 ---
 
+One of the key advantages of Phala Cloud is the ability to upgrade your application even while it's running inside a TEE. Thanks to the flexible architecture of the Dstack SDK, your application isn't permanently bound to specific hardware configurations.
 
-## Seamless Upgrades in TEE Environments
-
-One of the key advantages of Phala Cloud is the ability to upgrade your application even while it's running inside a Trusted Execution Environment (TEE). Thanks to the flexible architecture of the Dstack SDK, your application isn't permanently bound to specific hardware configurations.
-
-## Upgrade Process
+## Update Process
 
 1. Navigate to your CVM dashboard
-2. Locate the CVM running the application you wish to upgrade
-3. Click the **Upgrade** button to open the upgrade interface
-4. In the upgrade window, you can:
+2. Locate the CVM running the application you wish to update
+3. Click the **Code Update** button to open the update interface
+4. In the update window, you can:
    * Update your Docker Compose configuration
    * Modify environment variables
    * Adjust application settings
@@ -28,24 +25,24 @@ When restarting a Phala instance, it may not automatically pull the latest versi
 The new environment variables will completely replace all existing variables. Be sure to include all required variables in your update, even those you don't intend to change.
 </Note>
 
-## Completing the Upgrade
+## Completing the Update
 
-After configuring your upgrade parameters:
+After configuring your update parameters:
 
 1. Review all changes carefully
-2. Click the **Save Changes** button to initiate the upgrade
-3. Monitor the upgrade process through the CVM logs
+2. Click the **Save Changes** button to initiate the update
+3. Monitor the update process through the CVM logs
 
 The platform will handle the secure transition to your updated application while maintaining the TEE security guarantees.
 
 <Frame caption="Updating in Phala Cloud">
-    <img src="../../../images/cloud-update-env.png" alt="Updating in Phala Cloud" />
+    <img src="/images/cloud-update-env.png" alt="Updating in Phala Cloud" />
 
 </Frame>
 
-## Best Practices for Application Upgrades
+## Best Practices for Code Updates
 
-* Test your upgrades in a development environment before applying to production
+* Test your updates in a development environment before applying to production
 * Keep a backup of your current configuration before making changes
-* Schedule upgrades during periods of low user activity
-* Implement version tracking in your application to verify successful upgrades
+* Schedule updates during periods of low user activity
+* Implement version tracking in your application to verify successful updates
