--- a/phala-cloud/what-is/what-is-phala-cloud.mdx
+++ b/phala-cloud/what-is/what-is-phala-cloud.mdx
@@ -6,7 +6,7 @@ icon: cloud
 
 ## What is Phala Cloud
 
-Phala Cloud is a Confidential AI native Neocloud solution that provides you with a secure, user-friendly environment for running AI applications. You can deploy any standard Docker application directly into a **Trusted Execution Environment (TEE)**, ensuring your AI models and data remain confidential and tamper-proof.
+Phala Cloud is a Confidential AI native Neocloud solution that provides you with a secure, user-friendly environment for running AI applications. You can deploy any standard Docker application directly into a **TEE**, ensuring your AI models and data remain confidential and tamper-proof.
 
 ### Key Features for AI Developers
 
