--- a/phala-cloud/cvm/image/overview.mdx
+++ b/phala-cloud/cvm/image/overview.mdx
@@ -1,8 +1,7 @@
 ---
 description: Deploy confidential applications with Dstack - a TEE-based infrastructure
   platform.
-icon: box
-title: Image
+title: OS Image
 ---
 
 > [Phala Cloud](/) is the managed version of dstack deployment that enables developers to deploy programs to CVM (Confidential VM), and to follow the security best practices by default.
