use html for media kit download

--- a/dstack/media-kit.mdx
+++ b/dstack/media-kit.mdx
@@ -19,8 +19,8 @@ Welcome to the official Dstack media kit! Here you'll find all the brand assets,
     </Frame>
     - **Use case**: Light backgrounds, presentations, headers
     - **Format**: SVG, PNG
-    - [Download SVG](/images/Dstack%20Logo%20Kit/01%20Horizontal/01%20Dstack%20_Horizontal_primary.svg)
-    - [Download PNG](/images/Dstack%20Logo%20Kit/01%20Horizontal/01%20Dstack%20_Horizontal_primary.png)
+    - <a href="/images/Dstack Logo Kit/01 Horizontal/01 Dstack _Horizontal_primary.svg" download>Download SVG</a>
+    - <a href="/images/Dstack Logo Kit/01 Horizontal/01 Dstack _Horizontal_primary.png" download>Download PNG</a>
   </Card>
   
   <Card title="Dark Horizontal" icon="moon">
@@ -29,8 +29,8 @@ Welcome to the official Dstack media kit! Here you'll find all the brand assets,
     </Frame>
     - **Use case**: Dark backgrounds, dark mode interfaces
     - **Format**: SVG, PNG
-    - [Download SVG](/images/Dstack%20Logo%20Kit/01%20Horizontal/02%20Dstack%20_Horizontal_dark.svg)
-    - [Download PNG](/images/Dstack%20Logo%20Kit/01%20Horizontal/02%20Dstack%20_Horizontal_dark.png)
+    - <a href="/images/Dstack Logo Kit/01 Horizontal/02 Dstack _Horizontal_dark.svg" download>Download SVG</a>
+    - <a href="/images/Dstack Logo Kit/01 Horizontal/02 Dstack _Horizontal_dark.png" download>Download PNG</a>
   </Card>
 </CardGroup>
 
@@ -43,8 +43,8 @@ Welcome to the official Dstack media kit! Here you'll find all the brand assets,
     </Frame>
     - **Use case**: Square layouts, social media profiles, app icons
     - **Format**: SVG, PNG
-    - [Download SVG](/images/Dstack%20Logo%20Kit/02%20Vertical/01%20Dstack_Vertical_primary.svg)
-    - [Download PNG](/images/Dstack%20Logo%20Kit/02%20Vertical/01%20Dstack_Vertical_primary.png)
+    - <a href="/images/Dstack Logo Kit/02 Vertical/01 Dstack_Vertical_primary.svg" download>Download SVG</a>
+    - <a href="/images/Dstack Logo Kit/02 Vertical/01 Dstack_Vertical_primary.png" download>Download PNG</a>
   </Card>
 
   <Card title="Dark Vertical" icon="moon">
@@ -53,8 +53,8 @@ Welcome to the official Dstack media kit! Here you'll find all the brand assets,
     </Frame>
     - **Use case**: Square layouts on dark backgrounds
     - **Format**: SVG, PNG
-    - [Download SVG](/images/Dstack%20Logo%20Kit/02%20Vertical/02%20Dstack_Vertical_dark.svg)
-    - [Download PNG](/images/Dstack%20Logo%20Kit/02%20Vertical/02%20Dstack_Vertical_dark.png)
+    - <a href="/images/Dstack Logo Kit/02 Vertical/02 Dstack_Vertical_dark.svg" download>Download SVG</a>
+    - <a href="/images/Dstack Logo Kit/02 Vertical/02 Dstack_Vertical_dark.png" download>Download PNG</a>
   </Card>
 </CardGroup>
 
@@ -67,8 +67,8 @@ Welcome to the official Dstack media kit! Here you'll find all the brand assets,
     </Frame>
     - **Use case**: Favicon, small spaces, minimal branding
     - **Format**: SVG, PNG
-    - [Download SVG](/images/Dstack%20Logo%20Kit/03%20icon/01%20Dstack%20icon_primary.svg)
-    - [Download PNG](/images/Dstack%20Logo%20Kit/03%20icon/01%20Dstack%20icon_primary.png)
+    - <a href="/images/Dstack Logo Kit/03 icon/01 Dstack icon_primary.svg" download>Download SVG</a>
+    - <a href="/images/Dstack Logo Kit/03 icon/01 Dstack icon_primary.png" download>Download PNG</a>
   </Card>
   
   <Card title="Dark Icon" icon="moon">
@@ -77,8 +77,8 @@ Welcome to the official Dstack media kit! Here you'll find all the brand assets,
     </Frame>
     - **Use case**: Favicon on dark themes, minimal dark branding
     - **Format**: SVG, PNG
-    - [Download SVG](/images/Dstack%20Logo%20Kit/03%20icon/02%20Dstack%20icon_dark.svg)
-    - [Download PNG](/images/Dstack%20Logo%20Kit/03%20icon/02%20Dstack%20icon_dark.png)
+    - <a href="/images/Dstack Logo Kit/03 icon/02 Dstack icon_dark.svg" download>Download SVG</a>
+    - <a href="/images/Dstack Logo Kit/03 icon/02 Dstack icon_dark.png" download>Download PNG</a>
   </Card>
 </CardGroup>
 
