--- a/phala-cloud/security-and-privacy/security-audit.mdx
+++ b/phala-cloud/security-and-privacy/security-audit.mdx
@@ -1,14 +1,14 @@
 ---
 title: "Security Audit Report"
-description: "Independent third-party security audit of Phala Cloud's underlying Dstack infrastructure by zkSecurity"
+description: "Independent third-party security audit of Phala Cloud's underlying dstack infrastructure by zkSecurity"
 ---
 
 # Security Audit Report
 
-**Phala Cloud's security has been independently validated by zkSecurity**, a leading blockchain security firm. In May 2025, zkSecurity conducted a comprehensive audit of Dstack, the underlying infrastructure platform that powers Phala Cloud.
+**Phala Cloud's security has been independently validated by zkSecurity**, a leading blockchain security firm. In May 2025, zkSecurity conducted a comprehensive audit of dstack, the underlying infrastructure platform that powers Phala Cloud.
 
 <Note>
-**🛡️ Third-Party Security Certification**  
+**🛡️ Third-Party Security Certification**
 This independent security audit demonstrates Phala Network's commitment to transparency and provides assurance that your confidential computing workloads run on a thoroughly vetted platform.
 </Note>
 
@@ -16,10 +16,10 @@ This independent security audit demonstrates Phala Network's commitment to trans
 
 Dstack underwent a comprehensive security audit by zkSecurity in May 2025, covering:
 - **Low-level cryptographic implementations** (RATLS, attestation protocols)
-- **Production image security** and hardening measures  
+- **Production image security** and hardening measures
 - **TEE integration** and measurement integrity
 - **Attack surface analysis** and privilege escalation vectors
 
 <Card title="Dstack Security Audit" icon="shield-check" href="/dstack/security-audit">
-  View the complete security audit results, findings, and recommendations for the underlying Dstack infrastructure.
+  View the complete security audit results, findings, and recommendations for the underlying dstack infrastructure.
 </Card>
