--- a/phala-cloud/what-is/what-is-phala-cloud.mdx
+++ b/phala-cloud/what-is/what-is-phala-cloud.mdx
@@ -1,10 +1,16 @@
 ---
 title: What is Phala Cloud
-cover: images/phala-docs (1).jpg
 icon: cloud
 ---
 
-## What is Phala Cloud
+<img
+  className="block dark:hidden my-0 pointer-events-none"
+  src="/images/phala-docs (1).jpg"
+/>
+<img
+  className="hidden dark:block my-0 pointer-events-none"
+  src="/images/phala-docs (1).jpg"
+/>
 
 Phala Cloud is a Confidential AI native Neocloud solution that provides you with a secure, user-friendly environment for running AI applications. You can deploy any standard Docker application directly into a **TEE**, ensuring your AI models and data remain confidential and tamper-proof.
 
@@ -49,6 +55,14 @@ Understanding Phala Cloud's architecture:
     Developer tools for building on Phala Cloud
   </Card>
 </CardGroup>
+
+## Why Choose Phala Cloud?
+
+Phala Cloud combines the power of confidential computing with enterprise-grade infrastructure, providing:
+- **Privacy by Design**: TEE technology ensures your data remains confidential
+- **Zero Trust Security**: Hardware-backed security guarantees
+- **Developer-Friendly**: Simple deployment process with powerful capabilities
+- **Enterprise Ready**: Production-grade infrastructure for mission-critical applications
 
 ## Support
 
