--- a/phala-cloud/getting-started/overview.mdx
+++ b/phala-cloud/getting-started/overview.mdx
@@ -1,28 +1,50 @@
 ---
-description: Quick start guide for deploying confidential applications on Phala Cloud.
 title: Quick Start
 ---
 
-Phala Cloud offers a secure and private hosting in a TEE using [Dstack](/dstack/overview). This guide will get you started on Phala Cloud and deploy your first CVM in minutes!
+Phala Cloud provides secure, privacy-preserving application hosting through TEE technology. This guide will walk you through the essential steps to get started with Phala Cloud and deploy your first CVM in just a few minutes.
+
+## Getting Started
+
+What you'll accomplish:
+- Establish a secure Phala Cloud account
+- Deploy your first confidential computing environment
+- Experience TEE-powered privacy protection
+- Access enterprise-grade security features
+
+Follow these steps to set up your Phala Cloud application:
 
 <Steps>
 <Step>
 ### [Create Your Phala Cloud Account](/phala-cloud/getting-started/sign-up-for-cloud-account) (1 minute)
 
-Go to the [sign-up](https://cloud.phala.network/register) page for Cloud account section to get an official Phala Cloud account to get started.
+Begin by creating your official Phala Cloud account. Visit our [registration page](https://cloud.phala.network/register) to establish your secure cloud environment and gain access to our TEE-powered infrastructure.
 </Step>
 
 <Step>
-### [Your First CVM Deployment](/phala-cloud/getting-started/start-from-cloud-ui) (2-3 minutes)
+### [Deploy Your First CVM](/phala-cloud/getting-started/start-from-cloud-ui) (2-3 minutes)
 
-Once your account is created, deploy your first CVM without any coding by deploying a Jupyter Notebook.
+After account creation, deploy your inaugural CVM. Start with a pre-configured Jupyter Notebook environment to experience the power of confidential computing without writing any code.
 </Step>
 </Steps>
 
 <Note type="info">
-If you prefer using a CLI instead of the browser, check out [Start from Cloud CLI](/phala-cloud/phala-cloud-cli/start-from-cloud-cli).
+**Alternative Deployment Method**: For users who prefer command-line interfaces, we offer a comprehensive CLI solution. Learn more about [deploying via Cloud CLI](/phala-cloud/phala-cloud-cli/start-from-cloud-cli).
 </Note>
 
 ## Next Steps
 
-If you encounter any issues during deployment, check our [Troubleshooting](/phala-cloud/troubleshooting/debug-your-application) guide or reach out to our community for support at 🌍 [Global](https://t.me/+nbhjx1ADG9EyYmI9), 🇨🇳 [Chinese](https://t.me/+4PcAE9qTZ1kzM2M9).
+Once you've successfully deployed your first CVM, consider exploring:
+
+- [Advanced CVM configurations](/phala-cloud/cvm/create-with-docker-compose)
+- [Security best practices](/phala-cloud/security-and-privacy/security-architecture)
+- [Performance optimization](/phala-cloud/references/performance-report)
+
+## Support and Resources
+
+If you encounter any issues during deployment or have questions about Phala Cloud:
+
+- **Troubleshooting**: Visit our [troubleshooting guide](/phala-cloud/troubleshooting/debug-your-application) for common issues and solutions
+- **Community Support**: Connect with our global community:
+  - 🌍 [Telegram (Global)](https://t.me/+nbhjx1ADG9EyYmI9)
+  - 🇨🇳 [Telegram (Chinese)](https://t.me/+4PcAE9qTZ1kzM2M9)
