update templates overview page

--- a/phala-cloud/getting-started/explore-templates/overview.mdx
+++ b/phala-cloud/getting-started/explore-templates/overview.mdx
@@ -29,5 +29,5 @@ Check out our quick start guides below:
 </Columns>
 
 <Frame>
-  <img src="/images/image (23).png" />
+  <img src="/images/phala-cloud-template.png" />
 </Frame>
