--- a/phala-cloud/getting-started/explore-templates/overview.mdx
+++ b/phala-cloud/getting-started/explore-templates/overview.mdx
@@ -1,33 +1,33 @@
 ---
-description: Quick start guide for deploying confidential applications on Phala Cloud.
-title: Quick Guide
+title: Quick Start Guide
 ---
 
-With [**Phala Cloud Templates**](https://cloud.phala.network/templates), you can deploy swiftly with our ready-to-use templates! Enjoy quick, code-free deployments by exploring our diverse offerings from MCP, A2A, Next.js, x402, and more.
+<Frame caption="Phala Cloud Templates">
+  <img src="/images/getting-started/phala-cloud-template.png" />
+</Frame>
 
-Check out our quick start guides below:
+This guide provides a streamlined approach to deploying confidential applications on Phala Cloud. Utilize [**Phala Cloud Templates**](https://cloud.phala.network/templates) to accelerate your development process with pre-configured, production-ready templates. Deploy applications efficiently without extensive coding by leveraging our comprehensive template library, which includes MCP, A2A, Next.js, x402, and additional frameworks.
+
+Select from the following quick start guides to begin:
 
 <Columns cols={3}>
   <Card
-    img="/images/elizaos.png"
+    img="/images/getting-started/elizaos.png"
     href="/phala-cloud/getting-started/explore-templates/launch-an-eliza-agent"
   >
     Launch an Eliza Agent
   </Card>
   <Card
-    img="/images/nextjs-starter.png"
+    img="/images/getting-started/nextjs-starter.png"
     href="/phala-cloud/getting-started/explore-templates/start-from-template#next.js-template"
   >
     Next.js Application
   </Card>
   <Card
-    img="/images/python-starter.png"
+    img="/images/getting-started/python-starter.png"
     href="/phala-cloud/getting-started/explore-templates/start-from-template#python-template"
   >
     Python Backend
   </Card>
 </Columns>
 
-<Frame>
-  <img src="/images/phala-cloud-template.png" />
-</Frame>
