refine content overview section

--- a/phala-cloud/getting-started/explore-templates/overview.mdx
+++ b/phala-cloud/getting-started/explore-templates/overview.mdx
@@ -7,7 +7,7 @@ title: Quick Start Guide
   <img src="/images/getting-started/phala-cloud-template.png" />
 </Frame>
 
-This guide provides a streamlined approach to deploying confidential applications on Phala Cloud. Utilize [**Phala Cloud Templates**](https://cloud.phala.network/templates) to accelerate your development process with pre-configured, production-ready templates. Deploy applications efficiently without extensive coding by leveraging our comprehensive template library, which includes MCP, A2A, Next.js, x402, and additional frameworks.
+This guide outlines a structured method for deploying confidential applications on Phala Cloud. Use [**Phala Cloud Templates**](https://cloud.phala.network/templates) to integrate pre-built, production-grade setups. These templates support rapid deployment with minimal custom code, covering frameworks like MCP, A2A, Next.js, x402, and others.
 
 Select from the following quick start guides to begin:
 
