--- a/phala-cloud/getting-started/overview.mdx
+++ b/phala-cloud/getting-started/overview.mdx
@@ -7,10 +7,9 @@ Phala Cloud provides secure, privacy-preserving application hosting through TEE 
 ## Getting Started
 
 What you'll accomplish:
-- Establish a secure Phala Cloud account
-- Deploy your first confidential computing environment
-- Experience TEE-powered privacy protection
-- Access enterprise-grade security features
+- Get your free Phala Cloud account
+- Deploy your first TEE application
+- Get and verify your application TEE proof
 
 Follow these steps to set up your Phala Cloud application:
 
@@ -24,12 +23,12 @@ Begin by creating your official Phala Cloud account. Visit our [registration pag
 <Step>
 ### [Deploy Your First CVM](/phala-cloud/getting-started/start-from-cloud-ui) (2-3 minutes)
 
-After account creation, deploy your inaugural CVM. Start with a pre-configured Jupyter Notebook environment to experience the power of confidential computing without writing any code.
+After creating your account, deploy your first CVM. Begin with a pre-configured Jupyter Notebook setup to explore TEE features directly, without any custom code.
 </Step>
 </Steps>
 
 <Note type="info">
-**Alternative Deployment Method**: For users who prefer command-line interfaces, we offer a comprehensive CLI solution. Learn more about [deploying via Cloud CLI](/phala-cloud/phala-cloud-cli/start-from-cloud-cli).
+If you prefer using a CLI instead of the browser, check out [Start from Cloud CLI](/phala-cloud/phala-cloud-cli/start-from-cloud-cli).
 </Note>
 
 ## Next Steps
